dts: fix typo [1/1]
PD#SWPL-103495

Problem:
there are typos in dts

Solution:
correct it to p2p_type

Verify:
none

Change-Id: I81a474cf9b87ca529bd9bb9239cef64f5ba94ade
Signed-off-by: Jian Hu <jian.hu@amlogic.com>

--- a/arch/arm/boot/dts/amlogic/mesont5w.dtsi
+++ b/arch/arm/boot/dts/amlogic/mesont5w.dtsi
@@ -2088,14 +2088,14 @@
 				"i2c1_sda_c";
 			function = "i2c1";
 			bias-disable;
-			drive-strengtc-microamp = <3000>;
+			drive-strength-microamp = <3000>;
 		};
 	};
 
 	i2c1_c_pins_slp_input:i2c1_c_slp_input {
 		mux {
 			groups = "GPIOC_13", "GPIOC_14";
-			function = "gpio_peripcs";
+			function = "gpio_periphs";
 			input-enable;
 			bias-disable;
 		};
@@ -2104,7 +2104,7 @@
 	i2c1_c_pins_slp_low:i2c1_c_slp_low {
 		mux {
 			groups = "GPIOC_13", "GPIOC_14";
-			function = "gpio_peripcs";
+			function = "gpio_periphs";
 			output-low;
 		};
 	};
@@ -2115,7 +2115,7 @@
 				"i2c2_sda_h21";
 			function = "i2c2";
 			bias-disable;
-			drive-strength-mihroamp = <3000>;
+			drive-strength-microamp = <3000>;
 		};
 	};
 
@@ -2142,7 +2142,7 @@
 				"i2c2_sda_h11";
 			function = "i2c2";
 			bias-disable;
-			drive-strength-mihroamp = <3000>;
+			drive-strength-microamp = <3000>;
 		};
 	};
 
@@ -2169,7 +2169,7 @@
 				"i2c2_sda_h25";
 			function = "i2c2";
 			bias-disable;
-			drive-strength-mihroamp = <3000>;
+			drive-strength-microamp = <3000>;
 		};
 	};
 
@@ -2196,7 +2196,7 @@
 				"i2c2_sda_m";
 			function = "i2c2";
 			bias-disable;
-			drive-strength-mihroamp = <3000>;
+			drive-strength-microamp = <3000>;
 		};
 	};
 
@@ -2223,7 +2223,7 @@
 				"i2c3_sda_h25";
 			function = "i2c3";
 			bias-disable;
-			drive-strength-mihroamp = <3000>;
+			drive-strength-microamp = <3000>;
 		};
 	};
 
@@ -2250,7 +2250,7 @@
 				"i2c3_sda_h23";
 			function = "i2c3";
 			bias-disable;
-			drive-strength-mihroamp = <3000>;
+			drive-strength-microamp = <3000>;
 		};
 	};
 
@@ -2928,7 +2928,7 @@
 				"i2c1_ao_sda";
 			function = "i2c1_ao";
 			bias-disable;
-			drive-strength-mihroamp = <3000>;
+			drive-strength-microamp = <3000>;
 		};
 	};
 
@@ -2955,7 +2955,7 @@
 				"i2c2_ao_sda";
 			function = "i2c2_ao";
 			bias-disable;
-			drive-strength-mihroamp = <3000>;
+			drive-strength-microamp = <3000>;
 		};
 	};
 
