dmc_monitor: add dmc dev access callback func [1/1]
PD#SWPL-102608

Problem:
add dmc dev access callback func

Solution:
add dmc dev access callback func

Verify:
sc2

Change-Id: Ibaa921c19c6ab9ef5d7a722353056e8b6b92f2b6
Signed-off-by: qinglin.li <qinglin.li@amlogic.com>

--- a/drivers/amlogic/ddr_tool/Makefile
+++ b/drivers/amlogic/ddr_tool/Makefile
@@ -17,6 +17,7 @@ $(MODULE_NAME)-$(CONFIG_AMLOGIC_DDR_BANDWIDTH_S4)       += ddr_band_op_s4.o
 $(MODULE_NAME)-$(CONFIG_AMLOGIC_DDR_BANDWIDTH_S5)       += ddr_band_op_s5.o
 
 $(MODULE_NAME)-$(CONFIG_AMLOGIC_DMC_MONITOR)		+= dmc_monitor.o dmc_port_sub.o
+$(MODULE_NAME)-$(CONFIG_AMLOGIC_DMC_MONITOR)            += dmc_dev_access.o
 $(MODULE_NAME)-$(CONFIG_AMLOGIC_DMC_MONITOR_G12)	+= dmc_g12.o
 $(MODULE_NAME)-$(CONFIG_AMLOGIC_DMC_MONITOR_TM2)	+= dmc_tm2.o
 $(MODULE_NAME)-$(CONFIG_AMLOGIC_DMC_MONITOR_GX)		+= dmc_gx.o
