drm: AMLOGIC_DRM_NONROOT depends on DRM [1/1]
PD#SWPL-65409

Problem:
AMLOGIC_DRM_NONROOT depends on DRM

Solution:
AMLOGIC_DRM_NONROOT depends on DRM

Verify:
SC2_AH212

Test:
DRM-OSD-15

Change-Id: I2b11f3d94ccd7f3954b4fa4214ef491fe2969731
Signed-off-by: Bing Jiang <bing.jiang@amlogic.com>

--- a/drivers/gpu/drm/Kconfig
+++ b/drivers/gpu/drm/Kconfig
@@ -199,6 +199,13 @@ config DRM_SCHED
 	tristate
 	depends on DRM
 
+config AMLOGIC_DRM_NONROOT
+	bool "support drm whether require root privileges"
+	default n
+	depends on DRM && AMLOGIC_MODIFY
+	help
+		drmSetMaster and drmDropMaster whether require root privileges
+
 source "drivers/gpu/drm/i2c/Kconfig"
 
 source "drivers/gpu/drm/arm/Kconfig"
