Thermal: Fix the typo issue  [1/1]
PD#SWPL-103518

Problem:
Typo issue

Solution:
Fix the typo issue.

Verify:
None

Change-Id: I8b6f16bc956f0a771c0d34483dc7931d71ecd0de
Signed-off-by: binbin.wang <binbin.wang@amlogic.com>

--- a/drivers/amlogic/thermal/Kconfig
+++ b/drivers/amlogic/thermal/Kconfig
@@ -71,7 +71,7 @@ config AMLOGIC_DDR_THERMAL
 		If you want this support, you should say Y here.
 
 config AMLOGIC_GX_TEMP_SENSOR
-	bool "Amlgoic temperature sensor Support for GX chips"
+	bool "Amlogic temperature sensor Support for GX chips"
 	depends on AMLOGIC_THERMAL
 	depends on ARM64 || ARM64_A32
 	default n
