usn&eth: fix kernel5.4 typo err [1/1]
PD#SWPL-103669

Problem:
typo check report errors

Solution:
fix according to the prompt

Verify:
AR321

Change-Id: Ia39a368f5a830e356a12abb84a5b0c7f60a240a3
Signed-off-by: dian.shao <dian.shao@amlogic.com>

--- a/drivers/amlogic/ethernet/phy/Kconfig
+++ b/drivers/amlogic/ethernet/phy/Kconfig
@@ -9,4 +9,4 @@ config AMLOGIC_INTERNAL_PHY
 	  This module implements the amlogic internal phy,
 	  modify the dts file to switch internal external phy.
 
-	  if in doube, ask yizhou.
+	  if in doubt, ask yizhou.
