dvb: fix typo check issue [1/1]
PD#SWPL-103461

Problem:
typo check issue

Solution:
fix typo check issue

Verify:
not verified

Change-Id: I51547d1841b3f87269a3fe22cea42e8864adb32f
Signed-off-by: chuangcheng peng <chuangcheng.peng@amlogic.com>

--- a/drivers/amlogic/dvb/aucpu/Kconfig
+++ b/drivers/amlogic/dvb/aucpu/Kconfig
@@ -1,5 +1,5 @@
 #
-# Amlogic AUCPU driver configuation
+# Amlogic AUCPU driver configuration
 #
 config AMLOGIC_AUCPU
 	tristate "Amlogic Aucpu driver"
