VIM3L_64bit：Net: fix ethernet issue
Signed-off-by: Xiong Zhang <xiong@wesion.com>

--- a/arch/arm64/boot/dts/amlogic/kvim3l.dts
+++ b/arch/arm64/boot/dts/amlogic/kvim3l.dts
@@ -423,7 +423,7 @@
 	unifykey{
 		compatible = "amlogic, unifykey";
 		status = "ok";
-		unifykey-num = <17>;
+		unifykey-num = <18>;
 		unifykey-index-0 = <&keysn_0>;
 		unifykey-index-1 = <&keysn_1>;
 		unifykey-index-2 = <&keysn_2>;
@@ -441,6 +441,7 @@
 		unifykey-index-14= <&keysn_14>;
 		unifykey-index-15= <&keysn_15>;
 		unifykey-index-16= <&keysn_16>;
+		unifykey-index-17= <&keysn_17>;
 
 		keysn_0: key_0{
 			key-name = "usid";
@@ -528,6 +529,11 @@
 		keysn_16:key_16{
 			key-name = "netflix_mgkid";
 			key-device = "secure";
+			key-permit = "read","write","del";
+		};
+		keysn_17:key_17{
+			key-name = "eth_exphy_para";
+			key-device = "normal";
 			key-permit = "read","write","del";
 		};
 	};//End unifykey
