Revert "arm64: dts: overlays: VIM3L: update spdif"
This reverts commit 7ce6fe3984445fe9b753387fad149d25f4a315ec.

--- a/arch/arm64/boot/dts/amlogic/kvim3l_linux.dts
+++ b/arch/arm64/boot/dts/amlogic/kvim3l_linux.dts
@@ -1283,10 +1283,10 @@
 				<GIC_SPI 151 IRQ_TYPE_EDGE_RISING>;
 
 		interrupt-names = "irq_spdifin";
-//		pinctrl-names = "spdif_pins",
-//						"spdif_pins_mute";
-//		pinctrl-0 = <&spdifout>;/* bob remove &spdifin*/
-//		pinctrl-1 = <&spdifout_a_mute>;
+		pinctrl-names = "spdif_pins",
+						"spdif_pins_mute";
+		pinctrl-0 = <&spdifout>;/* bob remove &spdifin*/
+		pinctrl-1 = <&spdifout_a_mute>;
 
 		/*spdif clk tuning enable*/
 		clk_tuning_enable = <1>;
