--- a/arch/arm64/boot/dts/amlogic/overlays/kvim3l/Makefile
+++ b/arch/arm64/boot/dts/amlogic/overlays/kvim3l/Makefile
@@ -11,7 +11,7 @@ dtbo-y += uart3.dtbo \
 		  can.dtbo \
 		  mpu6050-i2c.dtbo \
 		  ext_board.dtbo \
-		  spdif.dtbo
+		  spdifin.dtbo
 
 targets += $(dtbo-y)
 always  := $(dtbo-y)
