Revert "arm64: dts: overlays: VIM3: update spdif"
This reverts commit 6cfa8a76a82725b912d48426039cf5a8f2b8bec5.

--- a/arch/arm64/boot/dts/amlogic/kvim3_linux.dts
+++ b/arch/arm64/boot/dts/amlogic/kvim3_linux.dts
@@ -1069,10 +1069,10 @@
 				<GIC_SPI 151 IRQ_TYPE_EDGE_RISING>;
 
 		interrupt-names = "irq_spdifin";
-//		pinctrl-names = "spdif_pins",
-//					"spdif_pins_mute";
-//		pinctrl-0 = <&spdifout>;
-//		pinctrl-1 = <&spdifout_a_mute>;
+		pinctrl-names = "spdif_pins",
+					"spdif_pins_mute";
+		pinctrl-0 = <&spdifout>;
+		pinctrl-1 = <&spdifout_a_mute>;
 		status = "okay";
 	};
 	aml_spdif_b: spdif_b {
