--- a/arch/arm64/boot/dts/rockchip/rk3568.dtsi
+++ b/arch/arm64/boot/dts/rockchip/rk3568.dtsi
@@ -575,6 +575,7 @@
 			power-domains = <&power RK3568_PD_PIPE>;
 			resets = <&cru SRST_USB3OTG0>;
 			reset-names = "usb3-otg";
+			linux,sysdev_is_parent;
 			snps,dis_enblslpm_quirk;
 			snps,dis-u1-entry-quirk;
 			snps,dis-u2-entry-quirk;
@@ -609,6 +610,7 @@
 			power-domains = <&power RK3568_PD_PIPE>;
 			resets = <&cru SRST_USB3OTG1>;
 			reset-names = "usb3-host";
+			linux,sysdev_is_parent;
 			snps,dis_enblslpm_quirk;
 			snps,dis-u2-freeclk-exists-quirk;
 			snps,dis-del-phy-power-chg-quirk;
